Added new build system.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Gulp #
 ########
 .sass-cache
-build
+dist
 
 # Node (https://github.com/github/gitignore/blob/master/Node.gitignore) #
 #########################################################################
