--- a/package.json
+++ b/package.json
@@ -1,45 +1,57 @@
 {
-  "author": "Lukas Mayerhofer",
-  "bugs": {
-    "url": "https://github.com/guh/guh_angular/issues"
+  "name": "guh-webinterface",
+  "version": "0.1.0",
+  "description": "A web app for guh written with AngularJS.",
+  "main": "index.js",
+  "scripts": {
+    "test": "test"
   },
-  "dependencies": {},
-  "description": "guh web interface",
-  "devDependencies": {
-    "bower": "^1.4.1",
-    "browser-sync": "~1.7.2",
-    "del": "~1.1.0",
-    "gulp": "~3.8.10",
-    "gulp-concat": "~2.4.2",
-    "gulp-jshint": "~1.9.0",
-    "gulp-load-plugins": "~0.7.1",
-    "gulp-minify-css": "~0.3.11",
-    "gulp-ng-annotate": "~0.4.1",
-    "gulp-plumber": "~0.6.6",
-    "gulp-rename": "~1.2.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-size": "~1.1.0",
-    "gulp-sourcemaps": "~1.2.8",
-    "gulp-svg-sprite": "~1.0.13",
-    "gulp-uglify": "~1.0.2",
-    "gulp-util": "~3.0.1",
-    "jasmine-core": "~2.1.3",
-    "jshint-stylish": "~1.0.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.5",
-    "main-bower-files": "~2.4.1",
-    "node-bourbon": "~1.2.3",
-    "vinyl": "^0.4.6"
-  },
-  "homepage": "http://www.guh.guru",
-  "license": "GPLv2",
-  "main": "gulpfile.js",
-  "name": "guh_angular",
-  "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/guh/guh_angular"
+    "url": "https://github.com/guh/guh-webinterface.git"
   },
-  "version": "0.1.0"
+  "keywords": [
+    "guh",
+    "guh-webinterface",
+    "angularjs"
+  ],
+  "author": "Lukas Mayerhofer <lukas.mayerhofer@guh.guru>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/guh/guh-webinterface/issues"
+  },
+  "homepage": "https://github.com/guh/guh-webinterface",
+  "devDependencies": {
+    "browser-sync": "^2.8.0",
+    "colors": "^1.1.2",
+    "del": "^1.2.0",
+    "event-stream": "^3.3.1",
+    "gulp": "^3.9.0",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.0.1",
+    "gulp-htmlhint": "^0.2.0",
+    "gulp-htmlmin": "^1.1.3",
+    "gulp-if": "^1.2.5",
+    "gulp-ignore": "^1.2.1",
+    "gulp-inject": "^1.3.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-ngdocs": "^0.2.13",
+    "gulp-order": "^1.1.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.3",
+    "gulp-size": "^1.2.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "jshint-stylish": "^2.0.1",
+    "main-bower-files": "^2.9.0",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.1",
+    "yargs": "^3.15.0"
+  }
 }
