--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-sass": "^2.0.3",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-svg-sprite": "^1.2.8",
     "gulp-uglify": "^1.2.0",
     "jshint-stylish": "^2.0.1",
     "main-bower-files": "^2.9.0",
