--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ########
 .sass-cache
 dist
+docs
 
 # Node (https://github.com/github/gitignore/blob/master/Node.gitignore) #
 #########################################################################
