--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A web app for guh written with AngularJS.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "dev": "webpack-dev-server --TARGET='DEV'",
+    "build": "webpack --TARGET='BUILD'",
+    "build-watch": "webpack --watch --TARGET='BUILD'",
+    "dist": "webpack --TARGET='DIST'",
+    "dist-watch": "webpack --watch --TARGET='DIST'",
+    "test": "./node_modules/karma/bin/karma start --single-run --TARGET='TEST'",
+    "test-watch": "./node_modules/karma/bin/karma start --TARGET='TEST'"
   },
   "repository": {
     "type": "git",
@@ -22,10 +28,23 @@
   },
   "homepage": "https://github.com/guh/guh-webinterface",
   "devDependencies": {
+    "angular-mocks": "^1.5.5",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.8.0",
+    "chai": "^3.5.0",
+    "chalk": "^1.1.3",
+    "clean-webpack-plugin": "^0.1.9",
     "colors": "^1.1.2",
+    "css-loader": "^0.23.1",
     "del": "^1.2.0",
+    "eslint": "^2.9.0",
+    "eslint-loader": "^1.3.0",
     "event-stream": "^3.3.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.0",
@@ -48,12 +67,39 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-svg-sprite": "^1.2.8",
     "gulp-uglify": "^1.2.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.16.1",
     "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "main-bower-files": "^2.9.0",
-    "node-bourbon": "^4.2.3",
+    "minimist": "^1.2.0",
+    "mocha": "^2.4.5",
+    "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
+    "node-sass": "^3.7.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.1",
+    "sass-loader": "^3.2.0",
+    "sinon": "^1.17.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
     "yargs": "^3.15.0"
+  },
+  "dependencies": {
+    "angular": "^1.5.5",
+    "es5-shim": "^4.5.8",
+    "es6-shim": "^0.35.1",
+    "lodash": "^4.12.0",
+    "node-bourbon": "^4.2.8"
   }
 }
