--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# Gulp #
-########
-.sass-cache
+# Webpack #
+###########
+dev
+build
 dist
-docs
 
 # Node (https://github.com/github/gitignore/blob/master/Node.gitignore) #
 #########################################################################
