--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "lodash": "^4.11.2",
     "ng-redux": "=3.3.3",
     "node-bourbon": "^4.2.8",
+    "node-uuid": "^1.4.7",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
