--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,9 @@
     "ng-dialog": "~0.5.6",
     "angular-animate": "~1.5.0",
     "angular-messages": "~1.5.0",
-    "angular-sanitize": "~1.5.0"
+    "angular-sanitize": "~1.5.0",
+    "angular-useragent-parser": "^0.1.0",
+    "ng-fastclick": "^1.0.2"
   },
   "devDependencies": {},
   "overrides": {
