--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "gulp": "^3.9.0",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-debug": "^2.0.1",
+    "gulp-debug": "^2.1.2",
     "gulp-htmlhint": "^0.2.0",
     "gulp-htmlmin": "^1.1.3",
     "gulp-if": "^1.2.5",
-    "gulp-ignore": "^1.2.1",
-    "gulp-inject": "^1.3.1",
+    "gulp-ignore": "^2.0.1",
+    "gulp-inject": "^4.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^1.2.0",
     "gulp-ng-html2js": "^0.2.0",
@@ -52,6 +52,7 @@
     "main-bower-files": "^2.9.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
+    "node-sass": "^3.10.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.1",
     "yargs": "^3.15.0"
