--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,9 @@
     "bower_components"
   ],
   "dependencies": {
-    "angular": "~1.5.0",
+    "angular": "1.5.9",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
-    "angular-ui-router": "^0.2.18",
+    "angular-ui-router": "0.2.18",
     "guh-libjs": "guh/guh-libjs",
     "lodash": "~3.10.0",
     "js-data": "~2.8.2",
@@ -97,6 +97,6 @@
     }
   },
   "resolutions": {
-    "angular": "1.5.8"
+    "angular": "1.5.9"
   }
 }
